# RandomPieces

./: .gitignore  README.md
cpp/: Makefile  assign_vec.cc  common.h  count.cc  lambda.cc  logger.h  parallel_link_occupy.cc  parallel_linkspeed.cc  parse_ip.cc  parse_str.cc  queue_test.cc  send_recv_ring.cpp  tcp.cpp  tcp.hpp  tcp_producer_consumer.cc  type_convert.cc
cuda/: CMakeLists.txt  data_assign.cc  data_move.cc  hostInteractDev.cc  intra_send_recv.cu  kernels.cu  kernels.h  launch_intra_send_recv.py  matrix_add.cu  memcpy_async.cc  sem_wrapper.cpp  shared_memory.cpp  stream_copy.cu  testSummation.cc
cuda/my_send_recv/: Makefile  benchmark.cc  common_structs.h  connection.cc  connection.h  kernels.cu  kernels.h  logger.h  rendezvous.cc  rendezvous.h  sendrecv.cc  sendrecv.h  test_kernels.cc  utils.cc  utils.h
nccl/: Makefile  allreduce_launch.sh  async_recv.cc  common.h  elastic_test.cc  hierarchy_allreduce.cc  run.sh  run_elastic.sh  run_sendrecv.sh  sdcc_logger.h  sdcc_tcp.cc  sdcc_tcp.h  send_recv.cc  thd_queue.h
py-utils/: prob_network_distance.py  profile_all_gather.py  profile_async_allgather.py  profile_launch.py  setup_ds.py
torch/all_gather_base_test/: all_gather_base_test.py
